Praciting with line breaks and horizontal rules

--- a/structure.html
+++ b/structure.html
@@ -21,5 +21,8 @@
 
     <p>AX<sup>2</sup>+BX+C=0</p>
     <p>H<sub>2</sub>O</p>
+
+    <p>The Earth <br /> gets one hundred tons heavier every day</p>
+    <p>Cross <hr /> the line</p>
 </body>
 </html>
