Practicing with strong and emphasis

--- a/structure.html
+++ b/structure.html
@@ -24,5 +24,8 @@
 
     <p>The Earth <br /> gets one hundred tons heavier every day</p>
     <p>Cross <hr /> the line</p>
+
+    <p><strong>Warning:</strong> stop</p>
+    <p>I think i <em>envy</em></p>
 </body>
 </html>
