--- a/structure.html
+++ b/structure.html
@@ -27,5 +27,10 @@
 
     <p><strong>Warning:</strong> stop</p>
     <p>I think i <em>envy</em></p>
+
+    <blockquote cite="http://en.wikipedia.org/wiki/Winnie-the-Pooh">
+    <p>Did you ever stop to think, and forget to start again?</p>
+    </blockquote>
+    <p>As A.A. Milne said, <q>Some people talk to animals. Not many listen though. That's the problem.</q></p>
 </body>
 </html>
