--- a/structure.html
+++ b/structure.html
@@ -32,5 +32,8 @@
     <p>Did you ever stop to think, and forget to start again?</p>
     </blockquote>
     <p>As A.A. Milne said, <q>Some people talk to animals. Not many listen though. That's the problem.</q></p>
+
+    <p><abbr title="Professor">Prof</abbr> Stephen Hawking is a theoretical physicist and cosmologist.</p>
+    <p><acronym title="National Aeronautics and Space Administration">NASA</acronym> do some crazy space stuff.</p>
 </body>
 </html>
