--- a/structure.html
+++ b/structure.html
@@ -35,5 +35,8 @@
 
     <p><abbr title="Professor">Prof</abbr> Stephen Hawking is a theoretical physicist and cosmologist.</p>
     <p><acronym title="National Aeronautics and Space Administration">NASA</acronym> do some crazy space stuff.</p>
+
+    <p><cite>Doraemon</cite> created by Fujiko F. Fujio.</p>
+    <p><dfn>Love</dfn> to like another adult very much and be romantically and sexually attracted to them, or to have strong feelings of liking a friend or person in your family</p>
 </body>
 </html>
