Practicing with author details

--- a/structure.html
+++ b/structure.html
@@ -38,5 +38,10 @@
 
     <p><cite>Doraemon</cite> created by Fujiko F. Fujio.</p>
     <p><dfn>Love</dfn> to like another adult very much and be romantically and sexually attracted to them, or to have strong feelings of liking a friend or person in your family</p>
+
+    <address>
+        <p><a href="https://www.facebook.com/2tahha/">My facebook</a></p>
+        <p> Da Nang city </p>
+    </address>
 </body>
 </html>
