Practicing with changes to content

--- a/structure.html
+++ b/structure.html
@@ -43,5 +43,7 @@
         <p><a href="https://www.facebook.com/2tahha/">My facebook</a></p>
         <p> Da Nang city </p>
     </address>
+
+    <p>It <del>time</del> to <s>leave</s> for <ins>a better place</ins> </p>
 </body>
 </html>
