Practicing with unordered list

--- a/list.html
+++ b/list.html
@@ -13,5 +13,11 @@
         <li>is</li>
         <li>me.</li>
     </ol>
+
+    <ul>
+        <li>1 egg</li>
+        <li>1 cup of flour</li>
+        <li>150ml milk</li>
+    </ul>
 </body>
 </html>
