Practicing with definition list

--- a/list.html
+++ b/list.html
@@ -19,5 +19,12 @@
         <li>1 cup of flour</li>
         <li>150ml milk</li>
     </ul>
+
+    <dl>
+        <dt>Platform</dt>
+        <dd>The type of computer system or the software that is used</dd>
+        <dt>Sun</dt>
+        <dd>The star that shines in the sky during the day and gives the earth heat and light</dd>
+    </dl>
 </body>
 </html>
