Practicing with nested list

--- a/list.html
+++ b/list.html
@@ -26,5 +26,18 @@
         <dt>Sun</dt>
         <dd>The star that shines in the sky during the day and gives the earth heat and light</dd>
     </dl>
+
+    <ul>
+        <li>Day 1</li>
+        <ul>
+            <li>Choose a topic</li>
+            <li>Review</li>
+        </ul>
+        <li>Day 2</li>
+        <ul>
+            <li>Write a report</li>
+            <li>Contact with teacher</li>
+        </ul>
+    </ul>
 </body>
 </html>
