Fix closing tag

--- a/form.html
+++ b/form.html
@@ -7,7 +7,6 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 <body>
-    
     <form action="#">
         <fieldset>
             <legend>
@@ -15,20 +14,20 @@
             </legend>
             <label>
                 Name:
-                <input type="text" name="username" size="30" maxlength="100" placeholder="What your name?"> 
-            </label> <br>
+                <input type="text" name="username" size="30" maxlength="100" placeholder="What your name?" /> 
+            </label> <br />
             <label>
                 Email:
-                <input type="email" name="useremail" size="30" maxlength="100"> 
-            </label> <br>
+                <input type="email" name="useremail" size="30" maxlength="100" /> 
+            </label> <br />
         </fieldset>
         <br>
         <fieldset>
             <legend>Your review:</legend>
             <label for="cmt">
                 Comment: 
-            </label> <br>
-            <textarea name="comment" id="cmt" cols="30" rows="10"></textarea> <br>
+            </label> <br />
+            <textarea name="comment" id="cmt" cols="30" rows="10" ></textarea> <br />
             <label for="where">
                 How did you hear about us?
             </label>
@@ -55,6 +54,5 @@
             <input type="submit" value="Submit review" />
         </fieldset>
     </form>
-
 </body>
 </html>
