--- a/images.html
+++ b/images.html
@@ -9,25 +9,23 @@
 <body>
     
     <p>
-        <img src="images/nature.jpg" alt="Nature" width="250px" height="100px" align="left">
+        <img src="images/nature.jpg" alt="Nature" width="250px" height="100px" align="left" />
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce id libero neque. Maecenas fermentum nulla sit amet luctus faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Duis pretium vestibulum faucibus. Pellentesque porttitor ante ac enim laoreet, sit amet luctus magna sodales. Fusce vulputate, augue eu maximus consectetur, lectus sem viverra nunc, efficitur sodales tellus mi a est. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec hendrerit volutpat porta. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam eleifend, risus sed sodales facilisis, diam tellus interdum erat, vel pulvinar diam diam eget urna. Vivamus sit amet odio eget massa vestibulum ultrices non at lorem.
     </p>
 
     <p>
-        <img src="images/sea.jpg" alt="Sea" width="250px" height="100px" align="right">
+        <img src="images/sea.jpg" alt="Sea" width="250px" height="100px" align="right" />
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce id libero neque. Maecenas fermentum nulla sit amet luctus faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Duis pretium vestibulum faucibus. Pellentesque porttitor ante ac enim laoreet, sit amet luctus magna sodales. Fusce vulputate, augue eu maximus consectetur, lectus sem viverra nunc, efficitur sodales tellus mi a est. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec hendrerit volutpat porta. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam eleifend, risus sed sodales facilisis, diam tellus interdum erat, vel pulvinar diam diam eget urna. Vivamus sit amet odio eget massa vestibulum ultrices non at lorem.
     </p>
 
     <p>
-        <img src="images/sun.jpg" alt="Sun" width="250px" height="100px" align="top">
+        <img src="images/sun.jpg" alt="Sun" width="250px" height="100px" align="top" />
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce id libero neque. Maecenas fermentum nulla sit amet luctus faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Duis pretium vestibulum faucibus. Pellentesque porttitor ante ac enim laoreet, sit amet luctus magna sodales. Fusce vulputate, augue eu maximus consectetur, lectus sem viverra nunc, efficitur sodales tellus mi a est. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec hendrerit volutpat porta. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam eleifend, risus sed sodales facilisis, diam tellus interdum erat, vel pulvinar diam diam eget urna. Vivamus sit amet odio eget massa vestibulum ultrices non at lorem.
     </p>
 
-    <p>
-        <figure>
-            <img src="images/bird.jpg" alt="Bird" width="500px"> <br>
-            <figcaption>a creature that is covered with feathers and has two wings and two legs. Most birds can fly.</figcaption>
-        </figure>
-    </p>
+    <figure>
+      <img src="images/bird.jpg" alt="Bird" width="500px" /> <br />
+      <figcaption>a creature that is covered with feathers and has two wings and two legs. Most birds can fly.</figcaption>
+    </figure>
 </body>
 </html>
