--- a/link.html
+++ b/link.html
@@ -7,9 +7,9 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 <body>
-    <a id="part1" href="https://github.com/">Git hub</a> <br/>
+    <a id="part1" href="https://github.com/">Git hub</a> <br />
     
-    <a id="part2" href="mailto:ngquoctoan.02@gmail.com">Email Toan</a><br/>
+    <a id="part2" href="mailto:ngquoctoan.02@gmail.com">Email Toan</a><br />
 
     <a id="part3" href="https://www.google.com.vn/" target="_blank">GG</a>
 
@@ -19,6 +19,6 @@
     
     <p id="part6">Nulla consequat ex lorem, ut pharetra augue volutpat vel. Cras rhoncus massa quis sapien volutpat faucibus. Duis est leo, semper a malesuada vitae, egestas ac mauris. Proin velit augue, dignissim in magna in, fringilla gravida ipsum. Nunc non turpis nisl. Mauris vel mi vehicula, elementum ligula nec, bibendum erat. Ut nulla orci, pellentesque et lectus non, hendrerit pharetra sem. Ut vitae magna vel est ullamcorper volutpat non in risus. Maecenas tristique, urna eu condimentum elementum, enim ipsum porttitor neque, eget iaculis leo diam quis risus. Nam tincidunt metus vel suscipit tincidunt. Cras sagittis quam vitae imperdiet sollicitudin. Aliquam non purus eget leo convallis consectetur eget non diam. Nulla mollis finibus purus quis luctus. Duis sit amet fermentum sapien. Sed lorem nibh, maximus in tempus mollis, pellentesque id lectus. Morbi turpis dolor, ultricies eget fringilla eget, vehicula sed tortor.</p>
 
-    <p><a href="#part1">Back to part 1</a></p>
+    <a href="#part1">Back to part 1</a>
 </body>
 </html>
