--- a/ecommerce-product-website/src/index.html
+++ b/ecommerce-product-website/src/index.html
@@ -10,5 +10,35 @@
 </head>
 <body>
   
+  <header>
+    <nav>
+      <a href="#"><img class="nav__logo" src="assets/images/logo.svg" alt="logo for the website" style="width: 50px; height: 50px;" /></a>
+      <ul class="nav__list">
+        <li class="nav__item">headphones</li>
+        <li class="nav__item">earphones</li>
+        <li class="nav__item">speakers</li>
+        <li class="nav__item">explore</li>
+      </ul>
+      <ul class="nav__list">
+        <li class="nav__item  nav__item--group"><img src="assets/images/nav_search-icon.svg" alt="search icon" /></li>
+        <li class="nav__item  nav__item--group"><img src="assets/images/nav_account-icon.svg" alt="account icon" /></li>
+        <li class="nav__item  nav__item--group  nav__item--margin-right"><img src="assets/images/nav_cart-icon.svg" alt="cart icon" /></li>
+      </ul>
+    </nav>
+    <section class="block">
+      <img src="assets/images/header_photo.svg" alt="photo for the header section">
+      <div class="block__col">
+        <div class="block__title">Beats Studio3 Wireless</div>
+        <div class="block__desc">Experience your<br /> music like never before.</div>
+        <div class="block__element">
+          <span class="block__price">$299.95</span>
+          <button class="block__btn">buy now</button>
+        </div>
+        <div class="block__promo">$60 Apple Music gift card with purchase of select Beats products.*</div>
+      </div>
+    </section>
+  </header>
+  
+
 </body>
 </html>
