--- a/ecommerce-product-website/src/index.html
+++ b/ecommerce-product-website/src/index.html
@@ -12,7 +12,7 @@
   
   <header>
     <nav>
-      <a href="#"><img class="nav__logo" src="assets/images/logo.svg" alt="logo for the website" style="width: 50px; height: 50px;" /></a>
+      <a href="#"><img class="nav__logo" src="assets/images/logo.svg" alt="logo for the website" /></a>
       <ul class="nav__list">
         <li class="nav__item">headphones</li>
         <li class="nav__item">earphones</li>
@@ -26,19 +26,18 @@
       </ul>
     </nav>
     <section class="block">
-      <img src="assets/images/header_photo.svg" alt="photo for the header section">
+      <img class="image" src="assets/images/header_photo.svg" alt="photo for the header section" />
       <div class="block__col">
-        <div class="block__title">Beats Studio3 Wireless</div>
-        <div class="block__desc">Experience your<br /> music like never before.</div>
-        <div class="block__element">
-          <span class="block__price">$299.95</span>
-          <button class="block__btn">buy now</button>
-        </div>
-        <div class="block__promo">$60 Apple Music gift card with purchase of select Beats products.*</div>
+        <p class="up-title  up-title--header">Beats Studio3 Wireless</p>
+        <h1 class="title title--header">Experience your music like never before.</h1>
+        <span class="block">
+          <p class="price  price--header">$299.95</p>
+          <button class="btn  btn--header">buy now</button>
+        </span>
+        <p class="promo  promo--header">$60 Apple Music gift card with purchase of select Beats products.*</p>
       </div>
     </section>
   </header>
-  
 
 </body>
 </html>
