--- a/ecommerce-product-website/src/index.html
+++ b/ecommerce-product-website/src/index.html
@@ -26,11 +26,11 @@
       </ul>
     </nav>
     <section class="block">
-      <img class="image" src="assets/images/header_photo.svg" alt="photo for the header section" />
+      <img class="image  image--left" src="assets/images/header_photo.svg" alt="photo for the header section" />
       <div class="block__col">
         <p class="up-title  up-title--header">Beats Studio3 Wireless</p>
-        <h1 class="title title--header">Experience your music like never before.</h1>
-        <span class="block">
+        <h1 class="title title--header">Experience your<br /> music like never before.</h1>
+        <span class="group">
           <p class="price  price--header">$299.95</p>
           <button class="btn  btn--header">buy now</button>
         </span>
@@ -38,6 +38,57 @@
       </div>
     </section>
   </header>
+  <!-- Section 1 Beats Pill -->
+  <section class="block  block--reverse">
+    <img src="assets/images/body_beats-pill.svg" alt="Photo Beats Pill for Section" />
+    <div class="block__col">
+      <p class="up-title">Portable Wireless Speaker</p>
+      <h1 class="title">Beats Pill<span class="sup">+</span></h1>
+      <h2 class="sub-title  sub-title--font">Available Colors</h2>
+      <p class="up-title">Find your Color</p>
+      <span class="dot  dot--white"></span>
+      <span class="dot  dot--red"></span>
+      <span class="dot  dot--black"></span>
+      <span class="group">
+        <p class="price">$299.95</p>
+        <button class="btn  btn--black">buy now</button>
+      </span>
+      <p class="promo  promo--black">$60 Apple Music gift card with purchase of select Beats products.*</p>
+    </div>
+  </section>
+  <!-- Section 2 PowerBeat Pro -->
+  <section class="block  block__section  block__section--bg">
+    <img src="assets/images/body_powerbeats-pro.svg" alt="Photo PowerBeats Pro for Section 2" />
+    <div class="block__col">
+      <p class="up-title">Totally wireless high-performance earphones</p>
+      <h1 class="title">Powerbeats Pro</h1>
+      <p class="desc">Up to 9 hours of listening time <br />
+        Apple H1 Chip & Class 1 Wireless Bluetooth® <br />
+        Sweat & water resistant <br />
+        Adjustable, secure-fit earhooks</p>
+      <span class="group">
+        <p class="price">$199.95</p>
+        <button class="btn  btn--black">buy now</button>
+      </span>
+      <p class="promo  promo--white">$60 Apple Music gift card with purchase of select Beats products.*</p>
+    </div>
+  </section>
+  <!-- Section 3 -->
+  <section class="block  block--reverse">
+    <img src="assets/images/body_section-3.svg" alt="Photo for Section 3" />
+    <div class="block__col">
+      <p class="up-title  up-title--margin">Talk. Listen. Beats.</p>
+      <p class="desc">Up to 8 hours of battery life <br />
+        With Fast Fuel, a 5-minute charge = 2 hours of playback <br />
+        Sweat & water resistant <br />
+        Apple W1 Chip & Class 1 Wireless Bluetooth® <br />
+      </p>
+      <span class="group">
+        <p class="price">$199.95</p>
+        <button class="btn  btn--black">buy now</button>
+      </span>
+    </div>
+  </section>
 
 </body>
 </html>
