--- a/ecommerce-product-website/src/index.html
+++ b/ecommerce-product-website/src/index.html
@@ -32,7 +32,7 @@
         <h1 class="title title--header">Experience your<br /> music like never before.</h1>
         <span class="group">
           <p class="price  price--header">$299.95</p>
-          <button class="btn  btn--header">buy now</button>
+          <button class="btn  btn--yellow">buy now</button>
         </span>
         <p class="promo  promo--header">$60 Apple Music gift card with purchase of select Beats products.*</p>
       </div>
@@ -74,7 +74,7 @@
     </div>
   </section>
   <!-- Section 3 -->
-  <section class="block  block--reverse">
+  <section class="block  block--reverse  block__section  block__section--bg-white">
     <img src="assets/images/body_section-3.svg" alt="Photo for Section 3" />
     <div class="block__col">
       <p class="up-title  up-title--margin">Talk. Listen. Beats.</p>
@@ -89,6 +89,125 @@
       </span>
     </div>
   </section>
+  <!-- List Product -->
+  <section class="product-container">
+    <div class="card">
+      <img class="card__img" src="assets/images/list-products-1.svg" alt="Product 1" />
+      <h1 class="card__title  title">Beatsˣ</h1>
+      <p class="card__desc  desc">Up to 8 hours of battery life<br />
+        With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
+      <span class="group">
+        <p class="card__price  price--card">$299.95</p>
+        <button class="card__btn  btn  btn--black">buy now</button>
+      </span>
+    </div>
+
+    <div class="card">
+      <img class="card__img" src="assets/images/list-products-2.svg" alt="Product 2" />
+      <h1 class="card__title  title">Beatsˣ</h1>
+      <p class="card__desc  desc">Up to 8 hours of battery life<br />
+        With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
+      <span class="group">
+        <p class="card__price  price--card">$199.95</p>
+        <button class="card__btn  btn  btn--black">buy now</button>
+      </span>
+    </div>
+
+    <div class="card">
+      <img class="card__img" src="assets/images/list-products-3.svg" alt="Product 3" />
+      <h1 class="card__title  title">Beatsˣ</h1>
+      <p class="card__desc  desc">Up to 8 hours of battery life<br />
+        With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
+      <span class="group">
+        <p class="card__price  price--card">$199.95</p>
+        <button class="card__btn  btn  btn--black">buy now</button>
+      </span>
+    </div>
+
+    <div class="card">
+      <img class="card__img" src="assets/images/list-products-4.svg" alt="Product 4" />
+      <h1 class="card__title  title">Beatsˣ</h1>
+      <p class="card__desc  desc">Up to 8 hours of battery life<br />
+        With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
+      <span class="group">
+        <p class="card__price  price--card">$999.95</p>
+        <button class="card__btn  btn  btn--black">buy now</button>
+      </span>
+    </div>
+
+    <div class="card">
+      <img class="card__img" src="assets/images/list-products-5.svg" alt="Product 5" />
+      <h1 class="card__title  title">Beatsˣ</h1>
+      <p class="card__desc  desc">Up to 8 hours of battery life<br />
+        With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
+      <span class="group">
+        <p class="card__price  price--card">$99.95</p>
+        <button class="card__btn  btn  btn--black">buy now</button>
+      </span>
+    </div>
+
+    <div class="card">
+      <img class="card__img" src="assets/images/list-products-6.svg" alt="Product 36" />
+      <h1 class="card__title  title  card__title--hidden">Beatsˣ</h1>
+      <p class="card__desc  desc">Up to 8 hours of battery life<br />
+        With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
+      <span class="group">
+        <p class="card__price  price--card">$199.95</p>
+        <button class="card__btn  btn  btn--black">buy now</button>
+      </span>
+    </div>
+  </section>
+  <!-- Contact Form -->
+  <form class="form-content" action="#" method="get">
+    <h1 class="form__title  title">Hear it first</h1>
+    <p class="form__sub-title  sub-title">Get updates on product drops, collaborations and all things Beats.</p>
+    <input class="input-text" type="text" placeholder="Enter your email" />
+    <input class="btn btn--yellow  btn--form" type="button" value="Sign up" />
+  </form>
+  <!-- Footer -->
+  <footer class="grid-container">
+    <div class="grid-item"><img src="assets/images/logo.svg" alt="Logo at the footer"></div>
+    <div class="grid-item">
+      <h2 class="title title--white">Products</h2>
+      <ul>
+        <li>headphones</li>
+        <li>earphones</li>
+        <li>speakers</li>
+        <li>accessories</li>
+        <li>collaborations</li>
+        <li>beatsaudio</li>
+        <li>special offers</li>
+      </ul>
+    </div>
+    <div class="grid-item">
+      <h2 class="title title--white">Support</h2>
+      <ul>
+        <li>product help</li>
+        <li>service & warranty</li>
+        <li>register your beats</li>
+        <li>update your beats</li>
+        <li>authorized service providers</li>
+        <li>contact support</li>
+        <li>international numbers</li>
+      </ul>
+    </div>
+    <div class="grid-item">
+      <h2 class="title title--white">Company</h2>
+      <ul>
+        <li>product help</li>
+        <li>news and events</li>
+        <li>promotion terms</li>
+        <li>privacy policy</li>
+        <li>trademark</li>
+        <li>term of use</li>
+        <li>cookies</li>
+      </ul>
+    </div>
+    <div class="grid-item">
+      <h2 class="title title--white">Follow Us</h2>
+      <img src="assets/images/footer_icon.svg" alt="Footer follow icon" />
+    </div>
+  </footer>
 
 </body>
 </html>
