--- a/ecommerce-product-website/src/index.html
+++ b/ecommerce-product-website/src/index.html
@@ -9,205 +9,208 @@
   <link rel='stylesheet' type='text/css' media='screen' href='styles/main.css'>
 </head>
 <body>
-  
-  <header>
-    <nav>
-      <a href="#"><img class="nav__logo" src="assets/images/logo.svg" alt="logo for the website" /></a>
-      <ul class="nav__list">
-        <li class="nav__item">headphones</li>
-        <li class="nav__item">earphones</li>
-        <li class="nav__item">speakers</li>
-        <li class="nav__item">explore</li>
-      </ul>
-      <ul class="nav__list">
-        <li class="nav__item  nav__item--group"><img src="assets/images/nav_search-icon.svg" alt="search icon" /></li>
-        <li class="nav__item  nav__item--group"><img src="assets/images/nav_account-icon.svg" alt="account icon" /></li>
-        <li class="nav__item  nav__item--group  nav__item--margin-right"><img src="assets/images/nav_cart-icon.svg" alt="cart icon" /></li>
-      </ul>
-    </nav>
-    <section class="block">
-      <img class="image  image--left" src="assets/images/header_photo.svg" alt="photo for the header section" />
-      <div class="block__col">
-        <p class="up-title  up-title--header">Beats Studio3 Wireless</p>
-        <h1 class="title title--header">Experience your<br /> music like never before.</h1>
+
+  <div class="wrapper">
+    <header>
+      <nav>
+        <a href="#"><img class="nav__logo" src="assets/images/logo.svg" alt="logo for the website" /></a>
+        <ul class="nav__list">
+          <li class="nav__item">headphones</li>
+          <li class="nav__item">earphones</li>
+          <li class="nav__item">speakers</li>
+          <li class="nav__item">explore</li>
+        </ul>
+        <ul class="nav__list">
+          <li class="nav__item  nav__item--group"><img src="assets/images/nav_search-icon.svg" alt="search icon" /></li>
+          <li class="nav__item  nav__item--group"><img src="assets/images/nav_account-icon.svg" alt="account icon" /></li>
+          <li class="nav__item  nav__item--group  nav__item--margin-right"><img src="assets/images/nav_cart-icon.svg" alt="cart icon" /></li>
+        </ul>
+      </nav>
+      <section class="block">
+        <img class="image" src="assets/images/header_photo.svg" alt="photo for the header section" />
+        <div class="content">
+          <p class="upper-title  upper-title--header">Beats Studio3 Wireless</p>
+          <p class="title title--header">Experience your<br />music like never before.</p>
+          <span class="group">
+            <p class="price  price--header"><span>&#36;</span>299.95</p>
+            <button class="btn  btn--yellow">buy now</button>
+          </span>
+          <p class="promo  promo--header"><span>&#36;</span>60 Apple Music gift card with purchase of select Beats products.*</p>
+        </div>
+      </section>
+    </header>
+    <!-- Section 1 Beats Pill -->
+    <section class="block  block--size  block--reverse">
+      <img src="assets/images/body_beats-pill.svg" alt="Photo Beats Pill for Section" />
+      <div class="content">
+        <p class="upper-title">Portable Wireless Speaker</p>
+        <p class="title">Beats Pill<span class="sup">+</span></p>
+        <p class="sub-title  sub-title--font">Available Colors</p>
+        <p class="upper-title">Find your Color</p>
+        <span class="dot  dot--white"></span>
+        <span class="dot  dot--red"></span>
+        <span class="dot  dot--black"></span>
         <span class="group">
-          <p class="price  price--header">$299.95</p>
-          <button class="btn  btn--yellow">buy now</button>
+          <p class="price"><span>&#36;</span>299.95</p>
+          <button class="btn  btn--black">buy now</button>
         </span>
-        <p class="promo  promo--header">$60 Apple Music gift card with purchase of select Beats products.*</p>
+        <p class="promo  promo--black"><span>&#36;</span>60 Apple Music gift card with purchase of select Beats products.*</p>
       </div>
     </section>
-  </header>
-  <!-- Section 1 Beats Pill -->
-  <section class="block  block--reverse">
-    <img src="assets/images/body_beats-pill.svg" alt="Photo Beats Pill for Section" />
-    <div class="block__col">
-      <p class="up-title">Portable Wireless Speaker</p>
-      <h1 class="title">Beats Pill<span class="sup">+</span></h1>
-      <h2 class="sub-title  sub-title--font">Available Colors</h2>
-      <p class="up-title">Find your Color</p>
-      <span class="dot  dot--white"></span>
-      <span class="dot  dot--red"></span>
-      <span class="dot  dot--black"></span>
-      <span class="group">
-        <p class="price">$299.95</p>
-        <button class="btn  btn--black">buy now</button>
-      </span>
-      <p class="promo  promo--black">$60 Apple Music gift card with purchase of select Beats products.*</p>
-    </div>
-  </section>
-  <!-- Section 2 PowerBeat Pro -->
-  <section class="block  block__section  block__section--bg">
-    <img src="assets/images/body_powerbeats-pro.svg" alt="Photo PowerBeats Pro for Section 2" />
-    <div class="block__col">
-      <p class="up-title">Totally wireless high-performance earphones</p>
-      <h1 class="title">Powerbeats Pro</h1>
-      <p class="desc">Up to 9 hours of listening time <br />
-        Apple H1 Chip & Class 1 Wireless Bluetooth® <br />
-        Sweat & water resistant <br />
-        Adjustable, secure-fit earhooks</p>
-      <span class="group">
-        <p class="price">$199.95</p>
-        <button class="btn  btn--black">buy now</button>
-      </span>
-      <p class="promo  promo--white">$60 Apple Music gift card with purchase of select Beats products.*</p>
-    </div>
-  </section>
-  <!-- Section 3 -->
-  <section class="block  block--reverse  block__section  block__section--bg-white">
-    <img src="assets/images/body_section-3.svg" alt="Photo for Section 3" />
-    <div class="block__col">
-      <p class="up-title  up-title--margin">Talk. Listen. Beats.</p>
-      <p class="desc">Up to 8 hours of battery life <br />
-        With Fast Fuel, a 5-minute charge = 2 hours of playback <br />
-        Sweat & water resistant <br />
-        Apple W1 Chip & Class 1 Wireless Bluetooth® <br />
-      </p>
-      <span class="group">
-        <p class="price">$199.95</p>
-        <button class="btn  btn--black">buy now</button>
-      </span>
-    </div>
-  </section>
-  <!-- List Product -->
-  <section class="product-container">
-    <div class="card">
-      <img class="card__img" src="assets/images/list-products-1.svg" alt="Product 1" />
-      <h1 class="card__title  title">Beatsˣ</h1>
-      <p class="card__desc  desc">Up to 8 hours of battery life<br />
-        With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
-      <span class="group">
-        <p class="card__price  price--card">$299.95</p>
-        <button class="card__btn  btn  btn--black">buy now</button>
-      </span>
-    </div>
+    <!-- Section 2 PowerBeat Pro -->
+    <section class="block  block--size  block--bg-section-2">
+      <img src="assets/images/body_powerbeats-pro.svg" alt="Photo PowerBeats Pro for Section 2" />
+      <div class="content">
+        <p class="upper-title">Totally wireless high-performance earphones</p>
+        <p class="title  title--uppercase">Powerbeats Pro</p>
+        <p class="desc">Up to 9 hours of listening time <br />
+          Apple H1 Chip <span>&#38;</span> Class 1 Wireless Bluetooth<span>&#174;</span> <br />
+          Sweat <span>&#38;</span> water resistant <br />
+          Adjustable, secure-fit earhooks</p>
+        <span class="group">
+          <p class="price"><span>&#36;</span>199.95</p>
+          <button class="btn  btn--black">buy now</button>
+        </span>
+        <p class="promo  promo--white"><span>&#36;</span>60 Apple Music gift card with purchase of select Beats products.*</p>
+      </div>
+    </section>
+    <!-- Section 3 -->
+    <section class="block  block--reverse  block--size  block--bg-section-3">
+      <img src="assets/images/body_section-3.svg" alt="Photo for Section 3" />
+      <div class="content">
+        <p class="upper-title  upper-title--margin-bottom">Talk. Listen. Beats.</p>
+        <p class="desc">Up to 8 hours of battery life <br />
+          With Fast Fuel, a 5-minute charge = 2 hours of playback <br />
+          Sweat <span>&#38;</span> water resistant <br />
+          Apple W1 Chip <span>&#38;</span> Class 1 Wireless Bluetooth<span>&#174;</span> <br />
+        </p>
+        <span class="group">
+          <p class="price"><span>&#36;</span>199.95</p>
+          <button class="btn  btn--black">buy now</button>
+        </span>
+      </div>
+    </section>
+    <!-- List Product -->
+    <section class="product-container">
+      <div class="card">
+        <div class="card__holder"><img class="card__img" src="assets/images/list-products_yellow-headphone.svg" alt="Yellow headphones" /></div>
+        <p class="title  title--card  card__title--margin  card--size">Beats<sup>x</sup></p>
+        <p class="card__desc  desc">Up to 8 hours of battery life<br />
+          With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
+        <span class="group">
+          <p class="card__price  card__price--margin"><span>&#36;</span>299.95</p>
+          <button class="btn  btn--card  btn--black">buy now</button>
+        </span>
+      </div>
 
-    <div class="card">
-      <img class="card__img" src="assets/images/list-products-2.svg" alt="Product 2" />
-      <h1 class="card__title  title">Beatsˣ</h1>
-      <p class="card__desc  desc">Up to 8 hours of battery life<br />
-        With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
-      <span class="group">
-        <p class="card__price  price--card">$199.95</p>
-        <button class="card__btn  btn  btn--black">buy now</button>
-      </span>
-    </div>
+      <div class="card">
+        <div class="card__holder"><img class="card__img" src="assets/images/list-products_black-inear.svg" alt="Black in-earphones" /></div>
+        <p class="title  title--card  card__title--margin">Beatsˣ</p>
+        <p class="card__desc  desc">Up to 8 hours of battery life<br />
+          With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
+        <span class="group">
+          <p class="card__price  card__price--margin"><span>&#36;</span>199.95</p>
+          <button class="btn  btn--card  btn--black">buy now</button>
+        </span>
+      </div>
 
-    <div class="card">
-      <img class="card__img" src="assets/images/list-products-3.svg" alt="Product 3" />
-      <h1 class="card__title  title">Beatsˣ</h1>
-      <p class="card__desc  desc">Up to 8 hours of battery life<br />
-        With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
-      <span class="group">
-        <p class="card__price  price--card">$199.95</p>
-        <button class="card__btn  btn  btn--black">buy now</button>
-      </span>
-    </div>
+      <div class="card">
+        <div class="card__holder"><img class="card__img" src="assets/images/list-products_gray-headphone.svg" alt="Gray headphones" /></div>
+        <p class="title  title--card  card__title--margin">Beatsˣ</p>
+        <p class="card__desc  desc">Up to 8 hours of battery life<br />
+          With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
+        <span class="group">
+          <p class="card__price  card__price--margin"><span>&#36;</span>199.95</p>
+          <button class="btn  btn--card  btn--black">buy now</button>
+        </span>
+      </div>
 
-    <div class="card">
-      <img class="card__img" src="assets/images/list-products-4.svg" alt="Product 4" />
-      <h1 class="card__title  title">Beatsˣ</h1>
-      <p class="card__desc  desc">Up to 8 hours of battery life<br />
-        With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
-      <span class="group">
-        <p class="card__price  price--card">$999.95</p>
-        <button class="card__btn  btn  btn--black">buy now</button>
-      </span>
-    </div>
+      <div class="card">
+        <div class="card__holder"><img class="card__img" src="assets/images/list-products_gold-inear.svg" alt="Golden in-earphones" /></div>
+        <p class="title  title--card  card__title--margin">Beatsˣ</p>
+        <p class="card__desc  desc">Up to 8 hours of battery life<br />
+          With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
+        <span class="group">
+          <p class="card__price  card__price--margin"><span>&#36;</span>999.95</p>
+          <button class="btn  btn--card  btn--black">buy now</button>
+        </span>
+      </div>
 
-    <div class="card">
-      <img class="card__img" src="assets/images/list-products-5.svg" alt="Product 5" />
-      <h1 class="card__title  title">Beatsˣ</h1>
-      <p class="card__desc  desc">Up to 8 hours of battery life<br />
-        With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
-      <span class="group">
-        <p class="card__price  price--card">$99.95</p>
-        <button class="card__btn  btn  btn--black">buy now</button>
-      </span>
-    </div>
+      <div class="card">
+        <div class="card__holder"><img class="card__img" src="assets/images/list-products_navy-inear.svg" alt="Navy in-earphones" /></div>
+        <p class="title  title--card  card__title--margin">Beatsˣ</p>
+        <p class="card__desc  desc">Up to 8 hours of battery life<br />
+          With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
+        <span class="group">
+          <p class="card__price  card__price--margin"><span>&#36;</span>99.95</p>
+          <button class="btn  btn--card  btn--black">buy now</button>
+        </span>
+      </div>
 
-    <div class="card">
-      <img class="card__img" src="assets/images/list-products-6.svg" alt="Product 36" />
-      <h1 class="card__title  title  card__title--hidden">Beatsˣ</h1>
-      <p class="card__desc  desc">Up to 8 hours of battery life<br />
-        With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
-      <span class="group">
-        <p class="card__price  price--card">$199.95</p>
-        <button class="card__btn  btn  btn--black">buy now</button>
-      </span>
-    </div>
-  </section>
-  <!-- Contact Form -->
-  <form class="form-content" action="#" method="get">
-    <h1 class="form__title  title">Hear it first</h1>
-    <p class="form__sub-title  sub-title">Get updates on product drops, collaborations and all things Beats.</p>
-    <input class="input-text" type="text" placeholder="Enter your email" />
-    <input class="btn btn--yellow  btn--form" type="button" value="Sign up" />
-  </form>
-  <!-- Footer -->
-  <footer class="grid-container">
-    <div class="grid-item"><img src="assets/images/logo.svg" alt="Logo at the footer"></div>
-    <div class="grid-item">
-      <h2 class="title title--white">Products</h2>
-      <ul>
-        <li>headphones</li>
-        <li>earphones</li>
-        <li>speakers</li>
-        <li>accessories</li>
-        <li>collaborations</li>
-        <li>beatsaudio</li>
-        <li>special offers</li>
-      </ul>
-    </div>
-    <div class="grid-item">
-      <h2 class="title title--white">Support</h2>
-      <ul>
-        <li>product help</li>
-        <li>service & warranty</li>
-        <li>register your beats</li>
-        <li>update your beats</li>
-        <li>authorized service providers</li>
-        <li>contact support</li>
-        <li>international numbers</li>
-      </ul>
-    </div>
-    <div class="grid-item">
-      <h2 class="title title--white">Company</h2>
-      <ul>
-        <li>product help</li>
-        <li>news and events</li>
-        <li>promotion terms</li>
-        <li>privacy policy</li>
-        <li>trademark</li>
-        <li>term of use</li>
-        <li>cookies</li>
-      </ul>
-    </div>
-    <div class="grid-item">
-      <h2 class="title title--white">Follow Us</h2>
-      <img src="assets/images/footer_icon.svg" alt="Footer follow icon" />
-    </div>
-  </footer>
+      <div class="card">
+        <div class="card__holder"><img class="card__img" src="assets/images/list-products_black-inear-lightning.svg" alt="Black in-earphones with lightning cable" /></div>
+        <p class="title  title--card  card__title--margin  card--hidden">Beatsˣ</p>
+        <p class="card__desc  desc">Up to 8 hours of battery life<br />
+          With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
+        <span class="group">
+          <p class="card__price  card__price--margin"><span>&#36;</span>199.95</p>
+          <button class="btn  btn--card  btn--black">buy now</button>
+        </span>
+      </div>
+    </section>
+    <!-- Contact Form -->
+    <form class="form-content" action="#" method="get">
+      <p class="form__title  title">Hear it first</p>
+      <p class="form__sub-title  sub-title">Get updates on product drops, collaborations and all things Beats.</p>
+      <input class="input-text" type="text" placeholder="Enter your email" />
+      <input class="btn  btn--form  btn--yellow" type="submit" value="Sign up" />
+    </form>
+    <!-- Footer -->
+    <footer class="grid-container">
+      <div class="grid-item"><img class="grid-logo" src="assets/images/logo.svg" alt="Logo at the footer"></div>
+      <div class="grid-item">
+        <ul>
+          <li class="grid-title">products</li>
+          <li>headphones</li>
+          <li>earphones</li>
+          <li>speakers</li>
+          <li>accessories</li>
+          <li>collaborations</li>
+          <li>beatsaudio</li>
+          <li>special offers</li>
+        </ul>
+      </div>
+      <div class="grid-item">
+        <ul>
+          <li class="grid-title">support</li>
+          <li>product help</li>
+          <li>service & warranty</li>
+          <li>register your beats</li>
+          <li>update your beats</li>
+          <li>authorized service providers</li>
+          <li>contact support</li>
+          <li>international numbers</li>
+        </ul>
+      </div>
+      <div class="grid-item">
+        <ul>
+          <li class="grid-title">company</li>
+          <li>product help</li>
+          <li>news and events</li>
+          <li>promotion terms</li>
+          <li>privacy policy</li>
+          <li>trademark</li>
+          <li>terms of use</li>
+          <li>cookies</li>
+        </ul>
+      </div>
+      <div class="grid-item">
+        <h2 class="grid-title">Follow Us</h2>
+        <img src="assets/images/footer_icon.svg" alt="Footer follow icon" />
+      </div>
+      <p class="grid-item  grid-line">Copyright <span>&#169;</span> 2020 Apple Inc. - All rights reserved.</p>
+    </footer>
+  </div>
 
 </body>
 </html>
