--- a/ecommerce-product-website/src/index.html
+++ b/ecommerce-product-website/src/index.html
@@ -29,8 +29,8 @@
       <section class="block">
         <img class="image" src="assets/images/header_photo.svg" alt="photo for the header section" />
         <div class="content">
-          <p class="upper-title  upper-title--header">Beats Studio3 Wireless</p>
-          <p class="title title--header">Experience your<br />music like never before.</p>
+          <h2 class="upper-title  upper-title--header">Beats Studio3 Wireless</h2>
+          <h1 class="title title--header">Experience your<br />music like never before.</h1>
           <span class="group">
             <p class="price  price--header"><span>&#36;</span>299.95</p>
             <button class="btn  btn--yellow">buy now</button>
@@ -44,7 +44,7 @@
       <img src="assets/images/body_beats-pill.svg" alt="Photo Beats Pill for Section" />
       <div class="content">
         <p class="upper-title">Portable Wireless Speaker</p>
-        <p class="title">Beats Pill<span class="sup">+</span></p>
+        <h2 class="title">Beats Pill<span class="sup">+</span></h2>
         <p class="sub-title  sub-title--font">Available Colors</p>
         <p class="upper-title">Find your Color</p>
         <span class="dot  dot--white"></span>
@@ -62,7 +62,7 @@
       <img src="assets/images/body_powerbeats-pro.svg" alt="Photo PowerBeats Pro for Section 2" />
       <div class="content">
         <p class="upper-title">Totally wireless high-performance earphones</p>
-        <p class="title  title--uppercase">Powerbeats Pro</p>
+        <h2 class="title  title--uppercase">Powerbeats Pro</h2>
         <p class="desc">Up to 9 hours of listening time <br />
           Apple H1 Chip <span>&#38;</span> Class 1 Wireless Bluetooth<span>&#174;</span> <br />
           Sweat <span>&#38;</span> water resistant <br />
@@ -94,7 +94,7 @@
     <section class="product-container">
       <div class="card">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_yellow-headphone.svg" alt="Yellow headphones" /></div>
-        <p class="title  title--card  card__title--margin  card--size">Beats<sup>x</sup></p>
+        <h3 class="title  title--card  card__title--margin  card--size">Beats<sup>x</sup></h3>
         <p class="card__desc  desc">Up to 8 hours of battery life<br />
           With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
         <span class="group">
@@ -105,7 +105,7 @@
 
       <div class="card">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_black-inear.svg" alt="Black in-earphones" /></div>
-        <p class="title  title--card  card__title--margin">Beatsˣ</p>
+        <h3 class="title  title--card  card__title--margin">Beatsˣ</h3>
         <p class="card__desc  desc">Up to 8 hours of battery life<br />
           With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
         <span class="group">
@@ -116,7 +116,7 @@
 
       <div class="card">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_gray-headphone.svg" alt="Gray headphones" /></div>
-        <p class="title  title--card  card__title--margin">Beatsˣ</p>
+        <h3 class="title  title--card  card__title--margin">Beatsˣ</h3>
         <p class="card__desc  desc">Up to 8 hours of battery life<br />
           With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
         <span class="group">
@@ -127,7 +127,7 @@
 
       <div class="card">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_gold-inear.svg" alt="Golden in-earphones" /></div>
-        <p class="title  title--card  card__title--margin">Beatsˣ</p>
+        <h3 class="title  title--card  card__title--margin">Beatsˣ</h3>
         <p class="card__desc  desc">Up to 8 hours of battery life<br />
           With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
         <span class="group">
@@ -138,7 +138,7 @@
 
       <div class="card">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_navy-inear.svg" alt="Navy in-earphones" /></div>
-        <p class="title  title--card  card__title--margin">Beatsˣ</p>
+        <h3 class="title  title--card  card__title--margin">Beatsˣ</h3>
         <p class="card__desc  desc">Up to 8 hours of battery life<br />
           With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
         <span class="group">
@@ -149,7 +149,7 @@
 
       <div class="card">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_black-inear-lightning.svg" alt="Black in-earphones with lightning cable" /></div>
-        <p class="title  title--card  card__title--margin  card--hidden">Beatsˣ</p>
+        <h3 class="title  title--card  card__title--margin  card--hidden">Beatsˣ</h3>
         <p class="card__desc  desc">Up to 8 hours of battery life<br />
           With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
         <span class="group">
@@ -160,7 +160,7 @@
     </section>
     <!-- Contact Form -->
     <form class="form-content" action="#" method="get">
-      <p class="form__title  title">Hear it first</p>
+      <h2 class="form__title  title">Hear it first</h2>
       <p class="form__sub-title  sub-title">Get updates on product drops, collaborations and all things Beats.</p>
       <input class="input-text" type="text" placeholder="Enter your email" />
       <input class="btn  btn--form  btn--yellow" type="submit" value="Sign up" />
