Fixing position at index.html and main.css

--- a/ecommerce-product-website/src/index.html
+++ b/ecommerce-product-website/src/index.html
@@ -27,7 +27,7 @@
         </ul>
       </nav>
       <section class="block">
-        <img class="image" src="assets/images/header_photo.svg" alt="photo for the header section" />
+        <img src="assets/images/header_photo.svg" alt="photo for the header section" />
         <div class="content">
           <h2 class="upper-title  upper-title--header">Beats Studio3 Wireless</h2>
           <h1 class="title title--header">Experience your<br />music like never before.</h1>
@@ -42,6 +42,9 @@
     <!-- Section 1 Beats Pill -->
     <section class="block  block--size  block--reverse">
       <img src="assets/images/body_beats-pill.svg" alt="Photo Beats Pill for Section" />
+      <span class="carousel  carousel--black"></span>
+      <span class="carousel  carousel--gray"></span>
+      <span class="carousel  carousel--gray"></span>
       <div class="content">
         <p class="upper-title">Portable Wireless Speaker</p>
         <h2 class="title">Beats Pill<span class="sup">+</span></h2>
@@ -160,8 +163,8 @@
     </section>
     <!-- Contact Form -->
     <form class="form-content" action="#" method="get">
-      <h2 class="form__title  title">Hear it first</h2>
-      <p class="form__sub-title  sub-title">Get updates on product drops, collaborations and all things Beats.</p>
+      <h2 class="title  form-title--margin">Hear it first</h2>
+      <p class="sub-title  form-sub-title--bottom ">Get updates on product drops, collaborations and all things Beats.</p>
       <input class="input-text" type="text" placeholder="Enter your email" />
       <input class="btn  btn--form  btn--yellow" type="submit" value="Sign up" />
     </form>
