Update tag at list products

--- a/ecommerce-product-website/src/index.html
+++ b/ecommerce-product-website/src/index.html
@@ -97,7 +97,7 @@
     <section class="product-container">
       <div class="card">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_yellow-headphone.svg" alt="Yellow headphones" /></div>
-        <h3 class="title  title--card  card__title--margin  card--size">Beats<sup>x</sup></h3>
+        <p class="title  title--card  card__title--margin  card--size">Beats<sup>x</sup></p>
         <p class="card__desc  desc">Up to 8 hours of battery life<br />
           With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
         <span class="group">
@@ -108,7 +108,7 @@
 
       <div class="card  card--padding-left">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_black-inear.svg" alt="Black in-earphones" /></div>
-        <h3 class="title  title--card  card__title--margin">Beats<sup>x</sup></h3>
+        <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
         <p class="card__desc  desc">Up to 8 hours of battery life<br />
           With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
         <span class="group">
@@ -119,7 +119,7 @@
 
       <div class="card  card--padding-left">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_gray-headphone.svg" alt="Gray headphones" /></div>
-        <h3 class="title  title--card  card__title--margin">Beats<sup>x</sup></h3>
+        <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
         <p class="card__desc  desc">Up to 8 hours of battery life<br />
           With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
         <span class="group">
@@ -130,7 +130,7 @@
 
       <div class="card">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_gold-inear.svg" alt="Golden in-earphones" /></div>
-        <h3 class="title  title--card  card__title--margin">Beats<sup>x</sup></h3>
+        <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
         <p class="card__desc  desc">Up to 8 hours of battery life<br />
           With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
         <span class="group">
@@ -141,7 +141,7 @@
 
       <div class="card  card--padding-left">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_navy-inear.svg" alt="Navy in-earphones" /></div>
-        <h3 class="title  title--card  card__title--margin">Beats<sup>x</sup></h3>
+        <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
         <p class="card__desc  desc">Up to 8 hours of battery life<br />
           With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
         <span class="group">
@@ -152,7 +152,7 @@
 
       <div class="card  card--padding-left">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_black-inear-lightning.svg" alt="Black in-earphones with lightning cable" /></div>
-        <h3 class="title  title--card  card__title--margin  card--hidden">Beats<sup>x</sup></h3>
+        <p class="title  title--card  card__title--margin  card--hidden">Beats<sup>x</sup></p>
         <p class="card__desc  desc">Up to 8 hours of battery life<br />
           With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
         <span class="group">
@@ -208,7 +208,7 @@
         </ul>
       </div>
       <div class="grid-item">
-        <h2 class="grid-title">Follow Us</h2>
+        <p class="grid-title">Follow Us</p>
         <img src="assets/images/footer_icon.svg" alt="Footer follow icon" />
       </div>
       <p class="grid-item  grid-line">Copyright <span>&#169;</span> 2020 Apple Inc. - All rights reserved.</p>
