--- a/ecommerce-product-website/src/index.html
+++ b/ecommerce-product-website/src/index.html
@@ -18,12 +18,12 @@
           <li class="nav__item">headphones</li>
           <li class="nav__item">earphones</li>
           <li class="nav__item">speakers</li>
-          <li class="nav__item">explore</li>
+          <li class="nav__item  nav__item--margin-right">explore</li>
         </ul>
         <ul class="nav__list">
           <li class="nav__item  nav__item--group"><img src="assets/images/nav_search-icon.svg" alt="search icon" /></li>
           <li class="nav__item  nav__item--group"><img src="assets/images/nav_account-icon.svg" alt="account icon" /></li>
-          <li class="nav__item  nav__item--group  nav__item--margin-right"><img src="assets/images/nav_cart-icon.svg" alt="cart icon" /></li>
+          <li class="nav__item  nav__item--group"><img src="assets/images/nav_cart-icon.svg" alt="cart icon" /></li>
         </ul>
       </nav>
       <section class="block">
@@ -47,7 +47,7 @@
       <span class="carousel  carousel--gray"></span>
       <div class="content">
         <p class="upper-title">Portable Wireless Speaker</p>
-        <h2 class="title">Beats Pill<span class="sup">+</span></h2>
+        <h2 class="title">Beats Pill<span class="sup">+</span></h2><sup></sup>
         <p class="sub-title  sub-title--font">Available Colors</p>
         <p class="upper-title">Find your Color</p>
         <span class="dot  dot--white"></span>
@@ -95,9 +95,10 @@
     </section>
     <!-- List Product -->
     <section class="product-container">
+      <!-- Product 1 -->
       <div class="card">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_yellow-headphone.svg" alt="Yellow headphones" /></div>
-        <p class="title  title--card  card__title--margin  card--size">Beats<sup>x</sup></p>
+        <p class="title  title--card  card__title--margin-line-1  card--size">Beats<sup>x</sup></p>
         <p class="card__desc  desc">Up to 8 hours of battery life<br />
           With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
         <span class="group">
@@ -106,9 +107,10 @@
         </span>
       </div>
 
+      <!-- Product 2 -->
       <div class="card  card--padding-left">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_black-inear.svg" alt="Black in-earphones" /></div>
-        <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
+        <p class="title  title--card  card__title--margin-line-1">Beats<sup>x</sup></p>
         <p class="card__desc  desc">Up to 8 hours of battery life<br />
           With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
         <span class="group">
@@ -117,9 +119,10 @@
         </span>
       </div>
 
+      <!-- Product 3 -->
       <div class="card  card--padding-left">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_gray-headphone.svg" alt="Gray headphones" /></div>
-        <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
+        <p class="title  title--card  card__title--margin-line-1">Beats<sup>x</sup></p>
         <p class="card__desc  desc">Up to 8 hours of battery life<br />
           With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
         <span class="group">
@@ -128,36 +131,39 @@
         </span>
       </div>
 
+      <!-- Product 4 -->
       <div class="card">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_gold-inear.svg" alt="Golden in-earphones" /></div>
-        <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
-        <p class="card__desc  desc">Up to 8 hours of battery life<br />
+        <p class="title  title--card  card__title--margin-line-2">Beats<sup>x</sup></p>
+        <p class="card__desc  card__desc--margin  desc">Up to 8 hours of battery life<br />
           With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
         <span class="group">
-          <p class="card__price  card__price--margin"><span>&#36;</span>999.95</p>
-          <button class="btn  btn--card  btn--black">buy now</button>
+          <p class="card__price  card__price--margin-line-2"><span>&#36;</span>999.95</p>
+          <button class="btn  btn--card  btn--card-line-2  btn--black">buy now</button>
         </span>
       </div>
 
+      <!-- Product 5 -->
       <div class="card  card--padding-left">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_navy-inear.svg" alt="Navy in-earphones" /></div>
-        <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
-        <p class="card__desc  desc">Up to 8 hours of battery life<br />
+        <p class="title  title--card  card__title--margin-line-2">Beats<sup>x</sup></p>
+        <p class="card__desc  card__desc--margin  desc">Up to 8 hours of battery life<br />
           With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
         <span class="group">
-          <p class="card__price  card__price--margin"><span>&#36;</span>99.95</p>
-          <button class="btn  btn--card  btn--black">buy now</button>
+          <p class="card__price  card__price--margin-line-2"><span>&#36;</span>99.95</p>
+          <button class="btn  btn--card  btn--card-line-2  btn--black">buy now</button>
         </span>
       </div>
 
+      <!-- Product 6 -->
       <div class="card  card--padding-left">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_black-inear-lightning.svg" alt="Black in-earphones with lightning cable" /></div>
-        <p class="title  title--card  card__title--margin  card--hidden">Beats<sup>x</sup></p>
-        <p class="card__desc  desc">Up to 8 hours of battery life<br />
+        <p class="title  title--card  card__title--margin-line-2  card--hidden">Beats<sup>x</sup></p>
+        <p class="card__desc  card__desc--margin  desc">Up to 8 hours of battery life<br />
           With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
         <span class="group">
-          <p class="card__price  card__price--margin"><span>&#36;</span>199.95</p>
-          <button class="btn  btn--card  btn--black">buy now</button>
+          <p class="card__price  card__price--margin-line-2"><span>&#36;</span>299.95</p>
+          <button class="btn  btn--card  btn--card-line-2  btn--black">buy now</button>
         </span>
       </div>
     </section>
