Update and fix some places

--- a/ecommerce-product-website/src/index.html
+++ b/ecommerce-product-website/src/index.html
@@ -11,24 +11,24 @@
 <body>
 
   <div class="wrapper">
-    <header>
-      <nav>
-        <a href="#"><img class="nav__logo" src="assets/images/logo.svg" alt="logo for the website" /></a>
-        <ul class="nav__list">
-          <li class="nav__item"><a class="nav__item--link" href="#">headphones</a></li>
-          <li class="nav__item"><a class="nav__item--link" href="#">earphones</a></li>
-          <li class="nav__item"><a class="nav__item--link" href="#">speakers</a></li>
-          <li class="nav__item"><a class="nav__item--link" href="#">explore</a></li>
+    <header class="head">
+      <nav class="navbar">
+        <a href="#"><img class="navbar__logo" src="assets/images/logo.svg" alt="logo for the website" /></a>
+        <ul class="list">
+          <li class="list__item"><a class="list__item--link" href="#">headphones</a></li>
+          <li class="list__item"><a class="list__item--link" href="#">earphones</a></li>
+          <li class="list__item"><a class="list__item--link" href="#">speakers</a></li>
+          <li class="list__item"><a class="list__item--link" href="#">explore</a></li>
         </ul>
-        <ul class="nav__list">
-          <li class="nav__item  nav__item--group"><a href="#"><img src="assets/images/nav_search-icon.svg" alt="search icon" /></a></li>
-          <li class="nav__item  nav__item--group"><a href="#"><img src="assets/images/nav_account-icon.svg" alt="account icon" /></a></li>
-          <li class="nav__item  nav__item--group"><a href="#"><img src="assets/images/nav_cart-icon.svg" alt="cart icon" /></a></li>
+        <ul class="list  list--margin">
+          <li class="list__icon"><a class="list__icon--margin" href="#"><img src="assets/images/nav_search-icon.svg" alt="search icon" /></a></li>
+          <li class="list__icon"><a class="list__icon--margin" href="#"><img src="assets/images/nav_account-icon.svg" alt="account icon" /></a></li>
+          <li class="list__icon"><a class="list__icon--margin" href="#"><img src="assets/images/nav_cart-icon.svg" alt="cart icon" /></a></li>
         </ul>
       </nav>
-      <div class="block">
+      <div class="area">
         <img src="assets/images/header_photo.svg" alt="photo for the header section" />
-        <div class="content">
+        <div class="content--area">
           <h2 class="upper-title  upper-title--header">Beats Studio3 Wireless</h2>
           <h1 class="title  title--header">Experience your<br />music like never before.</h1>
           <div class="group">
@@ -40,24 +40,24 @@
       </div>
     </header>
     <!-- Section 1 Beats Pill -->
-    <section class="block  block--size  block--reverse">
-      <div>
+    <section class="area  area--size  area--reverse">
+      <div class="area__item">
         <img src="assets/images/body_beats-pill.svg" alt="Photo Beats Pill for Section" />
-        <div>
-          <span class="carousel  carousel--black"></span>
-          <span class="carousel  carousel--gray"></span>
-          <span class="carousel  carousel--gray"></span>
+        <div class="carousel">
+          <span class="carousel__item  carousel__item--black"></span>
+          <span class="carousel__item  carousel__item--gray"></span>
+          <span class="carousel__item  carousel__item--gray"></span>
         </div>
       </div>
-      <div class="content">
+      <div class="content--area">
         <p class="upper-title">Portable Wireless Speaker</p>
         <h2 class="title">Beats Pill<sup>+</sup></h2>
         <p class="sub-title  sub-title--font">Available Colors</p>
         <p class="upper-title">Find your Color</p>
-        <div>
-          <span class="dot  dot--white"></span>
-          <span class="dot  dot--red"></span>
-          <span class="dot  dot--black"></span>
+        <div class="dot">
+          <span class="dot__item  dot__item--white"></span>
+          <span class="dot__item  dot__item--red"></span>
+          <span class="dot__item  dot__item--black"></span>
         </div>
         <div class="group">
           <p class="price">&#36;299.95</p>
@@ -67,9 +67,9 @@
       </div>
     </section>
     <!-- Section 2 PowerBeat Pro -->
-    <section class="block  block--size  block--bg-section-2">
+    <section class="area  area--size  area--bg-section-2">
       <img src="assets/images/body_powerbeats-pro.svg" alt="Photo PowerBeats Pro for Section 2" />
-      <div class="content">
+      <div class="content--area">
         <p class="upper-title">Totally wireless high-performance earphones</p>
         <h2 class="title  title--uppercase">Powerbeats Pro</h2>
         <div class="desc">
@@ -86,9 +86,9 @@
       </div>
     </section>
     <!-- Section 3 -->
-    <section class="block  block--reverse  block--size  block--bg-section-3">
+    <section class="area  area--reverse  area--size  area--bg-section-3">
       <img src="assets/images/body_section-3.svg" alt="Photo for Section 3" />
-      <div class="content">
+      <div class="content--area">
         <p class="upper-title  upper-title--margin-bottom">Talk. Listen. Beats.</p>
         <div class="desc">
           <p>Up to 8 hours of battery life</p>
@@ -107,93 +107,105 @@
       <!-- Product 1 -->
       <div class="card">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_yellow-headphone.svg" alt="Yellow headphones" /></div>
-        <p class="title  title--card  card__title--margin-line-1  card--size">Beats<sup>x</sup></p>
-        <div class="card__desc  desc">
-          <p>Up to 8 hours of battery life</p>
-          <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
-        </div>
-        <div class="group">
-          <p class="card__price  card__price--margin">&#36;299.95</p>
-          <button class="btn  btn--card  btn--black">buy now</button>
+        <div class="content--card">
+          <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
+          <div class="card__desc  desc">
+            <p>Up to 8 hours of battery life</p>
+            <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
+          </div>
+          <div class="group">
+            <p class="card__price  card__price--margin">&#36;299.95</p>
+            <button class="btn  btn--card  btn--black">buy now</button>
+          </div>
         </div>
       </div>
 
       <!-- Product 2 -->
-      <div class="card  card--padding-left">
+      <div class="card">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_black-inear.svg" alt="Black in-earphones" /></div>
-        <p class="title  title--card  card__title--margin-line-1">Beats<sup>x</sup></p>
-        <div class="card__desc  desc">
-          <p>Up to 8 hours of battery life</p>
-          <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
-        </div>
-        <div class="group">
-          <p class="card__price  card__price--margin">&#36;199.95</p>
-          <button class="btn  btn--card  btn--black">buy now</button>
+        <div class="content--card">
+          <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
+          <div div class="card__desc  desc">
+            <p>Up to 8 hours of battery life</p>
+            <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
+          </div>
+          <div class="group">
+            <p class="card__price  card__price--margin">&#36;199.95</p>
+            <button class="btn  btn--card  btn--black">buy now</button>
+          </div>
         </div>
       </div>
 
       <!-- Product 3 -->
-      <div class="card  card--padding-left">
+      <div class="card">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_gray-headphone.svg" alt="Gray headphones" /></div>
-        <p class="title  title--card  card__title--margin-line-1">Beats<sup>x</sup></p>
-        <div class="card__desc  desc">
-          <p>Up to 8 hours of battery life</p>
-          <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
-        </div>
-        <div class="group">
-          <p class="card__price  card__price--margin">&#36;199.95</p>
-          <button class="btn  btn--card  btn--black">buy now</button>
+        <div class="content--card">
+          <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
+          <div class="card__desc  desc">
+            <p>Up to 8 hours of battery life</p>
+            <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
+          </div>
+          <div class="group">
+            <p class="card__price  card__price--margin">&#36;199.95</p>
+            <button class="btn  btn--card  btn--black">buy now</button>
+          </div>
         </div>
       </div>
 
       <!-- Product 4 -->
       <div class="card">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_gold-inear.svg" alt="Golden in-earphones" /></div>
-        <p class="title  title--card  card__title--margin-line-2">Beats<sup>x</sup></p>
-        <div class="card__desc  desc">
-          <p>Up to 8 hours of battery life</p>
-          <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
+        <div class="content--card">
+          <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
+          <div class="card__desc  desc">
+            <p>Up to 8 hours of battery life</p>
+            <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
+          </div>
+          <div class="group">
+            <p class="card__price  card__price--margin">&#36;999.95</p>
+            <button class="btn  btn--card  btn--card  btn--black">buy now</button>
         </div>
-        <div class="group">
-          <p class="card__price  card__price--margin-line-2">&#36;999.95</p>
-          <button class="btn  btn--card  btn--card-line-2  btn--black">buy now</button>
         </div>
       </div>
 
       <!-- Product 5 -->
-      <div class="card  card--padding-left">
+      <div class="card">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_navy-inear.svg" alt="Navy in-earphones" /></div>
-        <p class="title  title--card  card__title--margin-line-2">Beats<sup>x</sup></p>
-        <div class="card__desc  desc">
-          <p>Up to 8 hours of battery life</p>
-          <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
-        </div>
-        <div class="group">
-          <p class="card__price  card__price--margin-line-2">&#36;99.95</p>
-          <button class="btn  btn--card  btn--card-line-2  btn--black">buy now</button>
+        <div class="content--card">
+          <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
+          <div class="card__desc  desc">
+            <p>Up to 8 hours of battery life</p>
+            <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
+          </div>
+          <div class="group">
+            <p class="card__price  card__price--margin">&#36;99.95</p>
+            <button class="btn  btn--card  btn--card  btn--black">buy now</button>
+          </div>
         </div>
       </div>
 
       <!-- Product 6 -->
-      <div class="card  card--padding-left">
+      <div class="card">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_black-inear-lightning.svg" alt="Black in-earphones with lightning cable" /></div>
-        <p class="title  title--card  card__title--margin-line-2  card--hidden">Beats<sup>x</sup></p>
-        <div class="card__desc  desc">
-          <p>Up to 8 hours of battery life</p>
-          <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
-        </div>
-        <div class="group">
-          <p class="card__price  card__price--margin-line-2">&#36;299.95</p>
-          <button class="btn  btn--card  btn--card-line-2  btn--black">buy now</button>
+        <div class="content--card">
+          <p class="title  title--card  card__title--margin  card--hidden">Beats<sup>x</sup></p>
+          <div class="card__desc  desc">
+            <p>Up to 8 hours of battery life</p>
+            <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
+          </div>
+          <div class="group">
+            <p class="card__price  card__price--margin">&#36;299.95</p>
+            <button class="btn  btn--card  btn--card  btn--black">buy now</button>
+          </div>
         </div>
       </div>
     </section>
     <!-- Contact Form -->
     <section class="form-container">
-      <form class="form-content" action="#" method="get">
-        <h2 class="title  form-title--margin">Hear it first</h2>
-        <p class="sub-title  form-sub-title--bottom ">Get updates on product drops, collaborations and all things Beats.</p>
-        <input class="input-text" type="text" placeholder="Enter your email" />
+      <form class="form__content" action="#" method="get">
+        <h2 class="title  form__title--margin">Hear it first</h2>
+        <p class="sub-title  form__subtitle--bottom ">Get updates on product drops, collaborations and all things Beats.</p>
+        <input class="form__input" type="text" placeholder="Enter your email" />
         <input class="btn  btn--form  btn--yellow" type="submit" value="Sign up" />
       </form>
     </section>
@@ -242,7 +254,7 @@
           <li><a class="grid__item--link" href="#"><img src="assets/images/footer_icon.svg" alt="Footer follow icon" /></a></li>
         </ul>
       </div>
-      <p class="grid__item  grid__line">Copyright &#169; 2020 Apple Inc. - All rights reserved.</p>
+      <p class="grid__item  grid__item--line">Copyright &#169; 2020 Apple Inc. - All rights reserved.</p>
     </footer>
   </div>
 
